# numbat

numbat/src/: vm.rs
numbat/src/interpreter/: mod.rs
numbat/src/typechecker/: mod.rs
numbox/: Cargo.toml  Dioxus.toml  README.md
numbox/src/: main.rs
