[package]
name = "numbox"
description = "A CSV editor for scientific calculations with first class support for physical dimensions and units."
authors = ["Haborite <korintje@ymail.ne.jp>"]
categories = ["command-line-utilities", "science", "mathematics"]
keywords = ["science", "physics", "units", "calculation"]
repository = "https://github.com/haborite/numbat"
version = "1.16.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "./README.md"
rust-version = "1.76"

[dependencies]
anyhow = "1"
rustyline = { version = "16.0.0", features = ["derive"] }
dirs = "6"
numbat = { version = "1.16.0", path = "../numbat" }
colored = "3"
itertools = "0.14"
toml = { version = "0.8.8", features = ["parse"] }
serde = { version = "1.0.195", features = ["derive"] }
terminal_size = "0.4.2"
jiff = "0.2"
dioxus = { version = "0.6.0", features = ["fullstack"] }

[dependencies.clap]
version = "4"
features = ["suggestions", "color", "wrap_help", "derive"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "numbat"
path = "src/main.rs"

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"